--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@
 .city-parallax-container {
   position: relative;
   height: 100vh;
-  margin-top: -90vh;
+  margin-top: -60vh;
 }
 
 .parallax-layer {
@@ -163,6 +163,7 @@
 
 .city-3 {
   z-index: 4;
+  margin-left: 33%;
 }
 
 
