--- a/src/index.css
+++ b/src/index.css
@@ -142,14 +142,25 @@
   left: 0;
 }
 
-.stars-1 { 
-  z-index: 3;
+.stars-3 { 
+  z-index: 1;
 }
+
 .stars-2 { 
   z-index: 2;
 }
-.stars-3 { 
-  z-index: 1;
+
+.stars-1 { 
+  z-index: 3;
+}
+
+.city-moon {
+  z-index: 4;
+  margin-left: 33%;
+}
+
+.city-bg {
+  z-index: 5;
 }
 
 .city-grd {
@@ -162,19 +173,11 @@
   margin-top: 5%;
 }
 
-.city-bg {
-  z-index: 5;
-}
-
-.city-bld {
+.city-buildings {
   margin-top: 5%;
   z-index: 8;
 }
 
-.city-moon {
-  z-index: 4;
-  margin-left: 33%;
-}
 
 
 @keyframes mulShdSpin {
